--- a/partials/home.html
+++ b/partials/home.html
@@ -1,9 +1,13 @@
-<div class="container">
+<div class="row">
+	<div class="small-12 columns">
+		<h2>Validate-JS</h2>
+	</div>
+</div>
 
-<h2>Home</h2>
-	
-<ul>
-	<li data-ng-repeat="item in list">{{ item }}</li>
-</ul>
-	
+<div class="row">
+	<div class="small-12 columns">
+		<ul>
+			<li data-ng-repeat="item in list">{{ item }}</li>
+		</ul>
+	</div>
 </div>
